@@ -62,6 +62,7 @@ HIGHLIGHTS
  -- Add job's features to SLURM_RESUME_FILE output for power saving.
  -- Automatically create directories for stdout/stderr output files. Paths may
     use %j and related substitution characters as well.
+ -- Add --tres-per-task to salloc/sbatch/srun.
 
 CONFIGURATION FILE CHANGES (see appropriate man page for details)
 =====================================================================
